# qt_cmake_scaffold

./: .gitignore  CMakeLists.txt  ReadME.md
cmake/: global_settings.cmake
conan/profiles/: msvc_x64.txt
src/: CMakeLists.txt  main.cpp
